// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can add a card 1`] = `
Object {
  "boardId": 1,
  "cards": Array [
    Object {
      "boardId": 1,
      "deleted": 0,
      "id": 1,
      "labelId": 0,
      "listId": 1,
      "order": 1,
      "text": "add theming",
    },
  ],
  "deleted": 0,
  "id": 1,
  "name": "ideas",
  "order": 0,
}
`;

exports[`creates instance successfully 1`] = `
Object {
  "boardId": 1,
  "cards": Array [],
  "deleted": 0,
  "id": 1,
  "name": "features",
  "order": 0,
}
`;
